Fleshed out Desktop View, completed 3 columns and added a compose message Modal. Responsiveness for Tablet and Phone views still needs to be added.

--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,26 @@
     height: 100vh;
   }
   
+  .email-info p {
+    margin-bottom: 0.2rem;
+    line-height: 1.2;
+  }
+
+  .third-column {
+    height: 100%;
+    margin-right: 16px
+  }
+
+  .email-message {
+    margin: 1rem 0;
+    overflow-y: auto;
+  }
+
+  .reply-area textarea {
+    width: 100%;
+    min-height: 100px;
+  }
+
+  .reply-area {
+        margin: 1rem 0;
+      }
